feat: add unit test, readme, remove hardcoded configurations

--- a/FinancialTransactions/AntiFraudService/appsettings.json
+++ b/FinancialTransactions/AntiFraudService/appsettings.json
@@ -8,6 +8,8 @@
     "AllowedHosts": "*",
     "Kafka": {
         "BootstrapServers": "kafka:29092",
+        "GroupId": "antifraud-group",
+        "TransactionTopic": "transaction-topic",
         "TransactionCreatedTopic": "transaction_created",
         "TransactionUpdatedTopic": "transaction_updated"
     }
